[package]
name = "ethereum-launcher"
version = "0.1.1"
authors = ["fstnetwork <admin@fstk.io>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
error-chain = "0.12.0"
rand = "0.3"

serde = "1.0.85"
serde_json = "1.0.36"
serde_derive = "1.0"
toml = "0.4.10"

tokio = "0.1.13"
tokio-timer = "0.2.8"
tokio-process = "0.2.3"
futures = "0.1.25"

ethereum-types = "0.4.0"
hyper = "0.12.21"
url = "1.7.2"
jsonrpc-core = "9.0.0"
emerald-rs = "0.25.0"

ethkey = { git = "https://github.com/paritytech/parity-ethereum.git" }
